Implement confirmation modal across multiple pages and update alert handling
- Added a custom confirmation modal to `adottanti.html`, `adozioni.html`, `animali.html`, `box.html`, `cartelle-cliniche.html`, `donatori.html`, `donazioni.html`, `veterinari.html`, and `visite-mediche.html`.
- Replaced `confirm` and `alert` calls in JavaScript files with `showConfirmModal` function for better user experience.
- Updated button labels for consistency and clarity in various HTML files.
- Enhanced CSS for the confirmation modal to improve styling and layout.

--- a/LbP-KeDuck/petflix/src/main/resources/static/adottanti.html
+++ b/LbP-KeDuck/petflix/src/main/resources/static/adottanti.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
+
 <body>
     <div class="app-container">
         <!-- Sidebar -->
@@ -61,42 +63,38 @@
             <div class="content-area">
                 <div class="page-header">
                     <h2 class="page-title">Adottanti</h2>
-                    <div class="action-buttons">
-                        <button class="btn btn-success" onclick="openAddModal()">Aggiungi Adottante</button>
-                    </div>
-                </div>
-
-                <div class="search-container">
-                    <input
-                        type="text"
-                        class="search-input"
-                        id="searchInput"
-                        placeholder="Cerca adottanti..."
-                        onkeyup="filterTable('adottantiTable', 'searchInput')"
-                    />
-                </div>
-
-                <div class="table-container">
-                    <table class="table" id="adottantiTable">
-                        <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Nome</th>
-                                <th>Cognome</th>
-                                <th>Telefono</th>
-                                <th>Email</th>
-                                <th>Indirizzo</th>
-                                <th>Idoneità</th>
-                                <th>Azioni</th>
-                            </tr>
-                        </thead>
-                        <tbody id="adottantiTableBody">
-                            <!-- Data will be loaded here -->
-                        </tbody>
-                    </table>
+                    <button class="btn btn-primary" id="addAdottanteBtn">
+                        <i class="fas fa-plus"></i> Nuovo Adottante
+                    </button>
                 </div>
             </div>
+
+            <div class="search-container">
+                <input type="text" class="search-input" id="searchInput" placeholder="Cerca adottanti..."
+                    onkeyup="filterTable('adottantiTable', 'searchInput')" />
+            </div>
+
+            <div class="table-container">
+                <table class="table" id="adottantiTable">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nome</th>
+                            <th>Cognome</th>
+                            <th>Telefono</th>
+                            <th>Email</th>
+                            <th>Indirizzo</th>
+                            <th>Idoneità</th>
+                            <th>Azioni</th>
+                        </tr>
+                    </thead>
+                    <tbody id="adottantiTableBody">
+                        <!-- Data will be loaded here -->
+                    </tbody>
+                </table>
+            </div>
         </div>
+    </div>
     </div>
 
     <!-- Modal per aggiungere/modificare adottante -->
@@ -145,7 +143,21 @@
         </div>
     </div>
 
+    <!-- Modal di conferma custom -->
+    <div id="confirmModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeConfirmModal">&times;</span>
+            <h3 id="confirmModalTitle">Conferma</h3>
+            <p id="confirmModalMessage"></p>
+            <div style="display: flex; gap: 1rem; justify-content: flex-end; margin-top: 1.5rem;">
+                <button class="btn btn-secondary" id="cancelConfirmBtn">Annulla</button>
+                <button class="btn btn-primary" id="okConfirmBtn">Conferma</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/common.js"></script>
     <script src="js/adottanti.js"></script>
 </body>
+
 </html>
