--- a/LbP-KeDuck/petflix/src/main/resources/static/adozioni.html
+++ b/LbP-KeDuck/petflix/src/main/resources/static/adozioni.html
@@ -180,6 +180,18 @@
     </div>
 </div>
 
+<!-- Modal di conferma custom -->
+<div id="confirmModal" class="modal">
+  <div class="modal-content">
+    <span class="close" id="closeConfirmModal">&times;</span>
+    <h3 id="confirmModalTitle">Conferma</h3>
+    <p id="confirmModalMessage"></p>
+    <div style="display: flex; gap: 1rem; justify-content: flex-end; margin-top: 1.5rem;">
+      <button class="btn btn-secondary" id="cancelConfirmBtn">Annulla</button>
+      <button class="btn btn-primary" id="okConfirmBtn">Conferma</button>
+    </div>
+  </div>
+</div>
 
     <script src="js/common.js"></script>
     <script src="js/adozioni.js"></script>
