--- a/LbP-KeDuck/petflix/src/main/resources/static/donazioni.html
+++ b/LbP-KeDuck/petflix/src/main/resources/static/donazioni.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
     <div class="app-container">
         <!-- Sidebar -->
@@ -62,13 +64,16 @@
                 <div class="page-header">
                     <h2 class="page-title">Donazioni</h2>
                     <div class="action-buttons">
-                        <button class="btn btn-success" onclick="openAddModal()">Aggiungi Donazione</button>
+                        <button class="btn btn-primary" id="addDonazioneBtn">
+                            <i class="fas fa-plus"></i> Nuova Donazione
+                        </button>
                         <button class="btn btn-primary" onclick="printTable()">Stampa</button>
                     </div>
                 </div>
 
                 <div class="search-container">
-                    <input type="text" class="search-input" id="searchInput" placeholder="Cerca donazioni..." onkeyup="filterTable('donazioniTable', 'searchInput')">
+                    <input type="text" class="search-input" id="searchInput" placeholder="Cerca donazioni..."
+                        onkeyup="filterTable('donazioniTable', 'searchInput')">
                 </div>
 
                 <div class="table-container">
@@ -125,7 +130,8 @@
                 </div>
                 <div class="form-group">
                     <label for="contenuto">Contenuto:</label>
-                    <input type="text" id="contenuto" name="contenuto" class="form-control" placeholder="Es: €500 o 10kg cibo" required>
+                    <input type="text" id="contenuto" name="contenuto" class="form-control"
+                        placeholder="Es: €500 o 10kg cibo" required>
                 </div>
                 <div class="form-group">
                     <label for="noteDonatore">Note:</label>
@@ -139,7 +145,21 @@
         </div>
     </div>
 
+    <!-- Modal di conferma custom -->
+    <div id="confirmModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeConfirmModal">&times;</span>
+            <h3 id="confirmModalTitle">Conferma</h3>
+            <p id="confirmModalMessage"></p>
+            <div style="display: flex; gap: 1rem; justify-content: flex-end; margin-top: 1.5rem;">
+                <button class="btn btn-secondary" id="cancelConfirmBtn">Annulla</button>
+                <button class="btn btn-primary" id="okConfirmBtn">Conferma</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/common.js"></script>
     <script src="js/donazioni.js"></script>
 </body>
+
 </html>
